--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "@tailwindcss/vite": "^4.1.11",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "form-data": "^4.0.3",
-    "framer-motion": "^12.23.0",
+    "framer-motion": "^12.23.3",
     "iron-session": "^8.0.4",
     "jose": "^6.0.11",
     "lucide-react": "^0.525.0",
