--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@chakra-ui/react": "^3.21.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@heroicons/react": "^2.2.0",
+    "@material-tailwind/react": "^2.1.10",
     "@prisma/client": "^6.11.1",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -21,6 +23,7 @@
     "@sendgrid/mail": "^8.1.5",
     "@tailwindcss/cli": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
+    "@types/styled-components": "^5.1.34",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "canvas-confetti": "^1.9.3",
@@ -39,6 +42,8 @@
     "prisma": "^6.11.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.71"
   },
@@ -50,9 +55,11 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "dotenv": "^17.0.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
