--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@react-email/components": "^0.1.1",
     "@sendgrid/mail": "^8.1.5",
+    "@table-library/react-table-library": "^4.1.15",
     "@tailwindcss/cli": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
     "@types/styled-components": "^5.1.34",
